--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
                                 <li><a href="DOCUMENTS/KAPADIYA DHRUVIN.pdf" download="CV"><button id="cv">Download
                                             CV</button></a></li>
                                 <div id="social-media-icon">
-                                    <li><a href="https://www.instagram.com/mr_kapdiya_?igsh=MWtwOXFyNGlybDBt"><i
+                                    <li><a href="https://www.instagram.com/dhruvin_107?igsh=aXRwd2gxNXlrZ2sw"><i
                                                 class="fa-brands fa-instagram"></i></a></li>
                                     <li><a href="www.linkedin.com/in/dhruvin-kapadiya"><i
                                                 class="fa-brands fa-linkedin-in"></i></a></li>
-                                    <li><a href="dhruvinkapadiya.github.io"><i class="fa-brands fa-github"></i></a></li>
+                                    <li><a href="https://github.com/Dhruvinkapadiya"><i class="fa-brands fa-github"></i></a></li>
                                 </div>
                             </ul>
                         </div>
