--- a/index.html
+++ b/index.html
@@ -131,40 +131,28 @@
     </div>
 
 
-    <div class="works" id="works">
-        <h1 class="heading text-center" data-aos="fade-left">My Recent Works</h1>
-        <div class="container-fluid" data-aos="zoom-in">
-            <div class="row d-flex justify-content-evenly">
-                <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3 project">
-                    <div class="card">
-                        <div class="card-body">
-                            <img src="./IMAGES/project-1.jpg" class="project-img img-fluid" alt="">
-                            <div class="link">
-                                <a href="https://dhruvinkapadiya.github.io/Architacture_Portfolio/">
-                                    <h1>Architacture_Portfolio</h1>
-                                    <p>A modern architecture portfolio showcasing innovative designs, projects, and
-                                        creative solutions with sleek aesthetics.</p>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3 project">
-                    <div class="card">
-                        <div class="card-body">
-                            <img src="./IMAGES/App Portfolio.jpg" class="project-img img-fluid" alt="">
-                            <div class="link">
-                                <a href="./DOCUMENTS/Dhruvin Portfolio.apk" download="Dhruvin Portfolio App">
-                                    <h1>Portfolio Application</h1>
-                                    <p>This Is Portfolio Application.</p>
-                                </a>
-                            </div>
+    <!-- Projects Section -->
+<div class="works" id="works">
+    <h1 class="heading text-center" data-aos="fade-left">My Recent Works</h1>
+    <div class="container">
+        <div class="row justify-content-center">
+            <!-- Project Card -->
+            <div class="col-md-6 col-lg-4">
+                <div class="card project-card">
+                    <div class="card-body">
+                        <img src="./IMAGES/project-1.png" class="project-img img-fluid" alt="Architecture Portfolio">
+                        <div class="project-overlay">
+                            <h2>Architecture Portfolio</h2>
+                            <p>A modern portfolio showcasing innovative designs with sleek aesthetics.</p>
+                            <a href="https://dhruvinkapadiya.github.io/Architacture_Portfolio/" class="btn btn-primary">View Project</a>
                         </div>
                     </div>
                 </div>
             </div>
+            <!-- Add more project cards here -->
         </div>
     </div>
+</div>
 
     <div class="resume" id="resume">
         <div class="container-fluid">
