--- a/index.html
+++ b/index.html
@@ -122,6 +122,13 @@
                                             and SEO-friendly designs, ensuring optimal performance across all</div>
                                     </div>
                                 </div>
+                                <div class="card-body">
+                                    <div class="row" style="height: fit-content;padding:1.5rem;">
+                                        <div class="col-2 text-center" id="number">04</div>
+                                        <div class="col-3" id="service">App Development</div>
+                                        <div class="col-7" id="description">As an app developer, I specialize in creating intuitive, high-performance mobile applications tailored to your needs. With expertise in Kotlin, Firebase, and modern UI/UX design principles, I build seamless, responsive, and feature-rich apps. My focus is on delivering efficient, user-friendly, and scalable solutions, ensuring a smooth experience across various devices. Whether it's Android development, database integration, or real-time functionality, I am committed to crafting innovative and impactful mobile applications.</div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -238,7 +245,7 @@
                 <div class="col-md-3 col-sm-6 col-12" data-aos="fade-up">
                     <div class="skill-icon">
                         <i class="fa-brands fa-java"></i>
-                        <h4>CORE JAVA</h4>
+                        <h4>JAVA</h4>
                     </div>
                 </div>
                 <div class="col-md-3 col-sm-6 col-12" data-aos="fade-up">
@@ -251,6 +258,12 @@
                     <div class="skill-icon">
                         <i class="fa-brands fa-android"></i>
                         <h4>ANDROID</h4>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-6 col-12" data-aos="fade-up">
+                    <div class="skill-icon">
+                        <i class="fa-brands fa-python"></i>
+                        <h4>PYTHON</h4>
                     </div>
                 </div>
             </div>
